WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
11879
Patterns on fill/stroke of text doesn't work
https://bugs.webkit.org/show_bug.cgi?id=11879
Summary
Patterns on fill/stroke of text doesn't work
Nikolas Zimmermann
Reported
2006-12-19 12:06:49 PST
A subtle bug in SVGPatternElement and two wrong calls in SVGPaintServerPatternCg, currently prevent that to work. Attaching patch soon.
Attachments
Initial patch
(44.89 KB, patch)
2006-12-19 12:10 PST
,
Nikolas Zimmermann
oliver
: review-
Details
Formatted Diff
Diff
Updated patch
(44.89 KB, patch)
2006-12-19 12:23 PST
,
Nikolas Zimmermann
oliver
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Nikolas Zimmermann
Comment 1
2006-12-19 12:10:03 PST
Created
attachment 11918
[details]
Initial patch Here's a screenshot showing pattern on stroke/fill of text:
http://www.flickr.com/photos/43532360@N00/327436697/
Oliver Hunt
Comment 2
2006-12-19 12:16:50 PST
Comment on
attachment 11918
[details]
Initial patch In - if (!m_paintServer || !m_paintServer->activeClient() || m_ignoreAttributeChanges) + if (ownerDocument()->parsing() || !attached() || !m_paintServer || m_ignoreAttributeChanges) Move the pure bool checks to the beginning of the condition
Nikolas Zimmermann
Comment 3
2006-12-19 12:23:07 PST
Created
attachment 11919
[details]
Updated patch Fix Oliver's issue.
Oliver Hunt
Comment 4
2006-12-19 12:26:41 PST
Comment on
attachment 11919
[details]
Updated patch Fix indentation of + if (isPaintingText()) then it's landable - if (isPaintingText()) { - const_cast<RenderObject*>(object)->style()->setColor(Color()); + + if (isPaintingText()) context->setTextDrawingMode(cTextFill); - } }
Nikolas Zimmermann
Comment 5
2006-12-19 12:31:13 PST
Landed in
r18322
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug