Reviewed by Oliver.

Fixes: http://bugs.webkit.org/show_bug.cgi?id=11879
Fix pattern on stroke/fill of text.


Canonical link: https://commits.webkit.org/15382@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@18322 268f45cc-cd09-0410-ab3c-d52691b4dbfc