WebCore/platform/graphics/svg/SVGPaintServerGradient.cpp
@@ -73,6 +73,7 @@ SVGPaintServerGradient::SVGPaintServerGradient()
     , m_stopsCount(0)
     , m_shadingCache(0)
     , m_savedContext(0)
+    , m_imageBuffer(0)
 #endif
 {
 }
